--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "private": true,
   "scripts": {
     "dev": "tsx watch server.ts",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.server.json",
     "start": "node dist/server.js"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.14.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "firebase": "^12.1.0",
     "genkit": "^1.14.1",
+    "next": "^15.4.6",
     "razorpay": "^2.9.6",
-    "socket.io": "^4.7.5",
-    "zod": "^3.24.2"
+    "socket.io": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/node": "^20.19.10",
+    "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.7",
@@ -36,3 +41,4 @@
   "license": "ISC",
   "type": "commonjs"
 }
+
