--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.14.1",
+    "@genkit-ai/googleai": "^1.16.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "firebase": "^12.1.0",
-    "genkit": "^1.14.1",
+    "genkit": "^1.16.0",
     "next": "^15.4.6",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
+    "@types/firebase": "^2.4.32",
     "@types/node": "^20.19.10",
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.10",
@@ -41,4 +42,3 @@
   "license": "ISC",
   "type": "commonjs"
 }
-
