--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2017",
     "module": "commonjs",
     "moduleResolution": "node",
-    "esModuleInterop": true,
+    "lib": ["esnext"],
+    "outDir": "./dist",
     "strict": true,
-    "outDir": "dist",
-    "skipLibCheck": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "types": ["node", "express", "cors", "socket.io", "firebase"]
   },
-  "include": ["server.ts"]
+  "include": ["server.ts", "ai/**/*.ts", "lib/**/*.ts", "declaration.d.ts"],
+  "exclude": ["node_modules"]
 }
