--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.16.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
@@ -16,6 +17,7 @@
     "genkit": "^1.16.0",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -24,18 +26,11 @@
     "@types/firebase": "^2.4.32",
     "@types/node": "^20.19.10",
     "@types/socket.io": "^3.0.1",
+    "concurrently": "^9.2.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.7",
     "typescript": "^5.9.2"
   },
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "commonjs"
 }
