--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2020",
     "module": "CommonJS",
+    "outDir": "./dist",
+    "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
     "types": ["node"]
   },
-  "include": ["server.ts", "lib/**/*.ts"]
+  "include": ["server.ts", "lib/**/*.ts", "actions.ts"]
 }
